<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_label"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/text_appetizers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_200"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_below="@id/text_title_label"
            android:text="@string/text_appetizers"/>
        <View
            android:id="@+id/text_view_separator_appetizers"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_below="@id/text_appetizers"
            android:layout_marginBottom="10dp"
            android:background="@color/yellow"/>

        <CheckBox
            android:id="@+id/text_potatoes_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="0.5dp"
            android:text="@string/text_potatoes"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/text_potatoes_price"
            android:layout_below="@id/text_view_separator_appetizers"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/text_potatoes_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_potatoes_price"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/text_view_separator_appetizers"
            android:layout_alignParentEnd="true"
            android:textColor="@color/teal_700"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/text_salmon_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="0.5dp"
            android:layout_below="@id/text_potatoes_checkBox"
            android:text="@string/text_salmon_checkbox"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/text_salmon_price"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/text_salmon_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_salmon_price"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_potatoes_price"
            android:layout_marginBottom="10dp"
            android:textColor="@color/teal_700"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/text_shrimp_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="0.5dp"
            android:layout_below="@id/text_salmon_checkbox"
            android:text="@string/text_shrimp"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/text_shrimp_price"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/text_shrimp_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_shrimp_price"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_salmon_price"
            android:textColor="@color/teal_700"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/text_squid_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="0.5dp"
            android:layout_below="@id/text_shrimp_checkbox"
            android:text="@string/text_squid"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/text_squid_price"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/text_squid_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_squid_price"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_shrimp_price"
            android:textColor="@color/teal_700"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/text_dishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_200"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/text_squid_checkbox"
            android:textSize="18sp"
            android:text="@string/text_dishes"/>

        <View
            android:id="@+id/text_view_separator_dishes"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_below="@id/text_dishes"
            android:layout_marginBottom="10dp"
            android:background="@color/yellow"/>

        <CheckBox
            android:id="@+id/text_lobster_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="0.5dp"
            android:layout_below="@id/text_view_separator_dishes"
            android:text="@string/text_lobster"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/text_lobster_price"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/text_lobster_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_lobster_price"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_view_separator_dishes"
            android:textColor="@color/teal_700"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/text_chicken_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="0.5dp"
            android:layout_below="@id/text_lobster_checkbox"
            android:text="@string/text_chicken"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/text_chicken_price"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/text_chicken_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_chicken_price"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_lobster_price"
            android:textColor="@color/teal_700"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/text_steak_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="0.5dp"
            android:layout_below="@id/text_chicken_checkbox"
            android:text="@string/text_steak"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/text_steak_price"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/text_steak_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_steak_price"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_chicken_price"
            android:textColor="@color/teal_700"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/text_fillet_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="0.5dp"
            android:layout_below="@id/text_steak_checkbox"
            android:text="@string/text_fillet"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/text_fillet_price"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/text_fillet_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_fillet_price"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_steak_price"
            android:textColor="@color/teal_700"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/text_drinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_200"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/text_fillet_checkbox"
            android:textSize="18sp"
            android:text="@string/text_drinks"/>

        <View
            android:id="@+id/text_view_separator_drinks"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_below="@id/text_drinks"
            android:layout_marginBottom="10dp"
            android:background="@color/yellow"/>

        <CheckBox
            android:id="@+id/text_soda_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="0.5dp"
            android:layout_below="@id/text_view_separator_drinks"
            android:text="@string/text_soda"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/text_soda_price"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/text_soda_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cajuina_price"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_view_separator_drinks"
            android:textColor="@color/teal_700"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/text_juice_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="0.5dp"
            android:layout_below="@id/text_soda_checkbox"
            android:text="@string/text_juice"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/text_juice_price"
            android:textColor="@color/teal_700"/>

        <TextView
            android:id="@+id/text_juice_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_juice_price"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_soda_price"
            android:textColor="@color/teal_700"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_juice_checkbox"
            android:text="@string/text_result"/>

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_result"
            android:layout_alignBaseline="@+id/button_order"
            android:layout_marginLeft="34dp"
            android:text="@string/text_button_calculate"
            android:background="@drawable/rounded_button"/>

        <Button
            android:id="@+id/button_order"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text_result"
            android:layout_alignParentEnd="true"
            android:text="@string/text_button_order"
            android:background="@drawable/rounded_button"/>
    </RelativeLayout>
</ScrollView>